--- a/merch.html
+++ b/merch.html
@@ -3,42 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="60">
+    
+    <!-- Favicons and Icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- Microsoft-specific configuration for pinned tiles -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+
     <title>Merch Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="merch.css">
+    <script src="merch.js" defer></script>
+
+    <noscript>
+        <p>Please enable JavaScript to view the website properly.</p>
+    </noscript>
 </head>
-<body class="dark-mode">
-    <!-- Navigation Menu -->
+<body>
     <header>
-        <div class="hamburger" id="hamburger">
-            &#9776;
-        </div>
-        <nav id="navLinks">
-            <ul>
+        <nav class="navbar">
+            <div id="hamburger" class="hamburger-icon">&#9776;</div>
+            <ul id="navLinks" class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="merch.html">Shop</a></li>
+                <li><a href="merch.html">Merch Store</a></li>
             </ul>
         </nav>
+        <div class="category-dropdown">
+            <select id="categorySelect">
+                <!-- Categories will be populated dynamically -->
+            </select>
+        </div>
     </header>
 
-    <!-- Main Content -->
-    <main>
-        <section class="category-section">
-            <label for="categorySelect">Select Category</label>
-            <select id="categorySelect">
-                <!-- Categories will be inserted dynamically by JS -->
-            </select>
-        </section>
+    <section>
+        <h2>Products</h2>
+        <div class="products-grid"></div>
+    </section>
 
-        <section class="products-grid">
-            <!-- Product cards will be inserted here by JS -->
-        </section>
+    <!-- Copy Protection Notice -->
+    <div class="copy-protection-message">
+        <p>Copying and pasting is disabled on this website.</p>
+    </div>
 
-        <!-- Copy Protection Banner -->
-        <section class="copy-protection-banner">
-            <p>Copying and pasting is disabled on this page.</p>
-        </section>
-    </main>
-
-    <script src="merch.js"></script>
+    <footer>
+        <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
+    </footer>
 </body>
 </html>
