--- a/merch.html
+++ b/merch.html
@@ -64,6 +64,8 @@
 
     <footer>
         <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
+        <!-- Device information will be shown here -->
+        <div class="device-info"></div>
     </footer>
 </body>
 </html>
