--- a/merch.html
+++ b/merch.html
@@ -45,18 +45,25 @@
                 <li><a href="merch.html">Merch Store</a></li>
             </ul>
         </nav>
-        <div class="category-dropdown">
+         class="category-dropdown">
             <select id="categorySelect">
                 <!-- Categories will be populated dynamically -->
             </select>
         </div>
     </header>
 
+    <!-- On Sale Section -->
+    <section>
+        <h2>On Sale Products</h2>
+        <div class="on-sale-grid"></div>
+    </section>
+
+    <!-- Regular Products Section -->
     <section>
         <h2>Products</h2>
         <div class="products-grid"></div>
     </section>
-
+    
     <!-- Copy Protection Notice -->
     <div class="copy-protection-message">
         <p>Copying and pasting is disabled on this website.</p>
