--- a/merch.html
+++ b/merch.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Merch Store</title>
+    <link rel="stylesheet" href="styles.css">
     <meta http-equiv="refresh" content="60">
     
     <!-- Favicons and Icons -->
@@ -27,14 +29,6 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
-
-    <title>Merch Store</title>
-    <link rel="stylesheet" href="merch.css">
-    <script src="merch.js" defer></script>
-
-    <noscript>
-        <p>Please enable JavaScript to view the website properly.</p>
-    </noscript>
 </head>
 <body>
     <header>
@@ -45,7 +39,7 @@
                 <li><a href="merch.html">Merch Store</a></li>
             </ul>
         </nav>
-         class="category-dropdown">
+        <div class="category-dropdown">
             <select id="categorySelect">
                 <!-- Categories will be populated dynamically -->
             </select>
@@ -63,7 +57,7 @@
         <h2>Products</h2>
         <div class="products-grid"></div>
     </section>
-    
+
     <!-- Copy Protection Notice -->
     <div class="copy-protection-message">
         <p>Copying and pasting is disabled on this website.</p>
@@ -74,5 +68,8 @@
         <!-- Device information will be shown here -->
         <div class="device-info"></div>
     </footer>
+
+    <!-- JavaScript -->
+    <script src="merch.js"></script>
 </body>
 </html>
