--- a/merch.html
+++ b/merch.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merch Store</title>
-    <link rel="stylesheet" href="styles.css">
     <meta http-equiv="refresh" content="60">
     
     <!-- Favicons and Icons -->
@@ -29,6 +27,14 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
+
+    <title>Merch Store</title>
+    <link rel="stylesheet" href="merch.css">
+    <script src="merch.js" defer></script>
+
+    <noscript>
+        <p>Please enable JavaScript to view the website properly.</p>
+    </noscript>
 </head>
 <body>
     <header>
@@ -46,13 +52,6 @@
         </div>
     </header>
 
-    <!-- On Sale Section -->
-    <section>
-        <h2>On Sale Products</h2>
-        <div class="on-sale-grid"></div>
-    </section>
-
-    <!-- Regular Products Section -->
     <section>
         <h2>Products</h2>
         <div class="products-grid"></div>
@@ -68,8 +67,5 @@
         <!-- Device information will be shown here -->
         <div class="device-info"></div>
     </footer>
-
-    <!-- JavaScript -->
-    <script src="merch.js"></script>
 </body>
 </html>
