--- a/index.html
+++ b/index.html
@@ -200,5 +200,9 @@
 
     <script src="script.js"></script>
     <script src="settings.js"></script>
+<!-- Copying and Pasting Disabled Message -->
+<div class="copy-paste-message">
+    Copying and Pasting is Disabled on this Website
+</div>
 </body>
 </html>
