--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Bus Army Dude. All Rights Reserved.</p>
+        <!-- Copy Protection Notice -->
+    <div class="copy-protection-message">
+        <p>Copying and pasting is disabled on this website.</p>
+    </div>
     </footer>
 
     <script src="script.js"></script>
     <script src="settings.js"></script>
-<!-- Copying and Pasting Disabled Message -->
-<div class="copy-paste-message">
-    Copying and Pasting is Disabled on this Website
-</div>
 </body>
 </html>
