--- a/merch.html
+++ b/merch.html
@@ -47,8 +47,9 @@
         </nav>
         <div class="category-dropdown">
             <select id="categorySelect">
-                <!-- Categories will be populated dynamically -->
-            </select>
+    <!-- Categories will be dynamically populated -->
+</select>
+
         </div>
     </header>
 
