--- a/merch.html
+++ b/merch.html
@@ -54,8 +54,9 @@
     </header>
 
     <section>
-        <h2>Products</h2>
-        <div class="products-grid"></div>
+        <div class="products-grid">
+    <!-- Products will be dynamically populated here -->
+</div>
     </section>
 
     <!-- Copy Protection Notice -->
