--- a/merch.html
+++ b/merch.html
@@ -47,16 +47,16 @@
         </nav>
         <div class="category-dropdown">
             <select id="categorySelect">
-    <!-- Categories will be dynamically populated -->
-</select>
-
+                <option value="all">All Products</option>
+                <!-- Categories will be dynamically populated here -->
+            </select>
         </div>
     </header>
 
     <section>
         <div class="products-grid">
-    <!-- Products will be dynamically populated here -->
-</div>
+            <!-- Products will be dynamically populated here -->
+        </div>
     </section>
 
     <!-- Copy Protection Notice -->
