--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Bus Army Dude</h1>
                 <img src="check.png" alt="Verified" class="verified">
             </div>
-            <p>Hi, I'm Bus Army Dude, a tech creator passionate about Apple products and gaming.</p>
+            <p>Hello, my name is River, I am 19. I am autistic. I love technology.</p>
         </div>
 
         <!-- Social Links Section -->
