--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
     <div class="copy-protection-message">
         <p>Copying and pasting is disabled on this website.</p>
     </div>
+
+<!-- Legal Protection Notice -->
+<div class="legal-protection-message">
+    <p>This repository is protected by copyright laws. You may not clone, fork, or redistribute this repository in any form. Unauthorized use of the repository may result in legal action. Any violation of these terms will be subject to legal action and prosecution to the fullest extent of the law.</p>
+</div>
     
     <!-- Footer -->
     <footer>
