--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="refresh" content="60">
+    <body class="dark-mode">
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
