--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
 
-    <body class="dark-mode">
+    <button id="mode-toggle" class="mode-toggle">Toggle Mode</button>
     <div class="container">
         <!-- Profile Section -->
         <div class="profile-section section">
