--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
 
-    <button id="mode-toggle" class="mode-toggle">Toggle Mode</button>
+ <!-- Toggle Button -->
+  <button id="mode-toggle" class="mode-toggle">Toggle Mode</button>
+    
     <div class="container">
         <!-- Profile Section -->
         <div class="profile-section section">
