--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <h2>TikTok Creator Shoutouts</h2>
+        <p class="last-updated">Last Updated: <span id="last-updated-date"></span></p>
         <div class="creator-grid">
         <!-- Cards will be dynamically generated here -->
         </div>
