--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <h2>TikTok Creator Shoutouts</h2>
-        <p id="last-updated">Last Updated: </p>
+        <p id="lastUpdated"></p> <!-- This will display the last updated timestamp -->
         <div class="creator-grid">
         <!-- Cards will be dynamically generated here -->
         </div>
