--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
         </div>
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
+        <div id="tiktok-shoutouts">
         <h2>TikTok Creator Shoutouts</h2>
-        <p id="lastUpdated"></p> <!-- This will display the last updated timestamp -->
+        <p id="lastUpdated"></p> <!-- Display last updated date and time here -->
+  <!-- Your TikTok Creator Shoutouts content here -->
+</div>
+
         <div class="creator-grid">
         <!-- Cards will be dynamically generated here -->
         </div>
