--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <a href="https://www.amazon.com/gp/profile/amzn1.account.AGT3UBZSCSSNND6WAGLOLAS6NICA?isOwnerPublicView=true" target="_blank"><img src="AMZN-e9f942e4.png" alt="Amazon"></a>
                 <a href="https://odysee.com/@BusArmyDude:a" target="_blank"><img src="Odysee_Icon.svg.png" alt="Odysee"></a>
                 <a href="https://discord.gg/NjMtuZYc52" target="_blank"><img src="discord-icon.svg" alt="Discord Server"></a>
+                <a href="https://www.instagram.com/busarmydude/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
             </div>
         </div>
 <!-- TikTok Shoutouts Section -->
