--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <a href="https://odysee.com/@BusArmyDude:a" target="_blank"><img src="Odysee_Icon.svg.png" alt="Odysee"></a>
                 <a href="https://discord.gg/NjMtuZYc52" target="_blank"><img src="discord-icon.svg" alt="Discord Server"></a>
                 <a href="https://www.instagram.com/busarmydude/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+                <a href="https://www.threads.net/@busarmydude" target="_blank"><img src="Threads_(app)_logo.svg.png" alt="Threads"></a>
             </div>
         </div>
 <!-- TikTok Shoutouts Section -->
