--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
         <!-- Cards will be dynamically generated here -->
         </div>
     </div>
+
+<!-- Instagram Shoutouts Section -->
+<div class="shoutouts-section section">
+    <div id="instagram-shoutouts">
+        <h2>Instagram Creator Shoutouts</h2>
+        <p id="lastUpdatedInstagram"></p> <!-- Display last updated date and time here -->
+    </div>
+
+    <div class="creator-grid">
+        <!-- Instagram Creator Shoutouts cards will be dynamically generated here -->
+    </div>
+</div>
+        
 <!-- Latest TikTok Video Section -->
         <div class="latest-tiktok-section section">
             <h2>My Latest TikTok</h2>
