--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="creator-grid">
-        <!-- Instagram Creator Shoutouts cards will be dynamically generated here -->
+        <!-- Cards will be dynamically generated here -->
     </div>
 </div>
         
