--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <h2>Instagram Creator Shoutouts</h2>
         <p id="lastUpdatedInstagram"></p> <!-- Display last updated date and time here -->
     </div>
-
-    <div class="creator-grid">
+    <div class="creator-grid-instagram"> <!-- Instagram specific grid -->
         <!-- Cards will be dynamically generated here -->
     </div>
 </div>
+
         
 <!-- Latest TikTok Video Section -->
         <div class="latest-tiktok-section section">
