--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="shoutouts-section section">
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
-        <p id="lastUpdatedInstagram"></p> <!-- Display last updated date and time here -->
+        <p id="lastUpdatedInstagram">Last Updated: January 5, 2025, 6:54 PM</p> <!-- Set the date and time manually -->
     </div>
     <div class="creator-grid-instagram"> <!-- Instagram specific grid -->
         <!-- Cards will be dynamically generated here -->
