--- a/index.html
+++ b/index.html
@@ -82,7 +82,17 @@
     </div>
 </div>
 
+<!-- YouTube Shoutouts Section -->
+<div class="shoutouts-section section">
+    <div id="youtube-shoutouts">
+        <h2>YouTube Creator Shoutouts</h2>
+        <p id="lastUpdatedYouTube"></p> <!-- Display last updated date and time here -->
+    </div>
 
+    <div class="youtube-creator-grid">
+        <!-- YouTube creator cards will be dynamically generated here -->
+    </div>
+</div>
         
 <!-- Latest TikTok Video Section -->
         <div class="latest-tiktok-section section">
