--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="shoutouts-section section">
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
-        <p id="last-updated-time-instagram"></p>
+        <p id="lastUpdatedInstagram"></p> <!-- Display last updated date and time here -->
     </div>
 
     <div class="instagram-creator-grid">
