--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                 <a href="https://rivers-merch-store.printify.me/products" target="_blank">Merch Store (Printify)</a>
                 <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank">Merch Store (Fourthwall)</a>
                 <a href="https://discord.gg/NjMtuZYc52" target="_blank">Join the Bus Army Dude's Community Discord Server!</a>
+                <a href="https://forms.gle/wmugwzd7W3VGghw6A" target="_blank">Bug Report Form!</a>
+                <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank">Feedback or Suggestions Form!</a>
             </div>
         </div>
 
