--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="shoutouts-section section">
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
-        <p class="last-updated">Last Updated: <span id="lastUpdatedTimestamp">Loading...</span></p> <!-- Display last updated date and time here -->
+        <p class="last-updated">Last Updated: <span id="last-updated-timestamp"></span></p> <!-- Display last updated date and time here -->
     </div>
 
     <div class="instagram-creator-grid">
