--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
 <div class="shoutouts-section section">
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
-        <p class="last-updated">Last Updated: <span id="last-updated-timestamp"></span></p> <!-- Display last updated date and time here -->
+        <!-- Last Updated Timestamp -->
+        <p class="last-updated">Last Updated: <span id="last-updated-timestamp"></span></p>
     </div>
 
     <div class="instagram-creator-grid">
         <!-- Instagram creator cards will be dynamically generated here -->
     </div>
-</div>
+</div> 
+
 
 <!-- YouTube Shoutouts Section -->
 <div class="shoutouts-section section">
