--- a/index.html
+++ b/index.html
@@ -70,19 +70,18 @@
         </div>
     </div>
 
-<!-- Instagram Shoutouts Section -->
+<<!-- Instagram Shoutouts Section -->
 <div class="shoutouts-section section">
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
         <!-- Last Updated Timestamp -->
-        <p class="last-updated">Last Updated: <span id="last-updated-timestamp"></span></p>
+        <p class="last-updated">Last Updated: <span id="instagram-last-updated-timestamp"></span></p>
     </div>
 
     <div class="instagram-creator-grid">
         <!-- Instagram creator cards will be dynamically generated here -->
     </div>
 </div> 
-
 
 <!-- YouTube Shoutouts Section -->
 <div class="shoutouts-section section">
