--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-<<!-- Instagram Shoutouts Section -->
+<!-- Instagram Shoutouts Section -->
 <div class="shoutouts-section section">
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
