--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="instagram-shoutouts">
         <h2>Instagram Creator Shoutouts</h2>
         <!-- Last Updated Timestamp -->
-        <p class="last-updated">Last Updated: <span id="instagram-last-updated-timestamp">N/A</span></p>
+        <p class="last-updated"> <span id="instagram-last-updated-timestamp">N/A</span></p>
     </div>
 
     <div class="instagram-creator-grid">
