--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
             <h2>My Latest TikTok</h2>
             <div class="tiktok-embed-container">
                 <blockquote class="tiktok-embed" 
-                    cite="https://www.tiktok.com/@busarmydude/video/7454998564540845354" 
-                    data-video-id="7454998564540845354" 
+                    cite="https://www.tiktok.com/@busarmydude/video/7456651075861482798" 
+                    data-video-id="7456651075861482798" 
                     style="max-width: 605px;min-width: 325px;" >
                     <section>
                         <a target="_blank" title="@busarmydude"  href="https://www.tiktok.com/@busarmydude?refer=embed">@busarmydude</a>
-                        </a> <a title="onthisday" target="_blank" href="https://www.tiktok.com/tag/onthisday?refer=embed">#onthisday</a>
-                        <a target="_blank" title="♬ original sound - Bus Army Dude" href="https://www.tiktok.com/music/original-sound-7454998550772419374?refer=embed">♬ original sound - Bus Army Dude</a>
+                        <a target="_blank" title="♬ original sound - Chaunieshark33" href="https://www.tiktok.com/music/original-sound-7409643658686827307?refer=embed">♬ original sound - Chaunieshark33</a>
                     </section>
                 </blockquote>
                 <script async src="https://www.tiktok.com/embed.js"></script>
