--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Social Links Section -->
         <div class="social-section section">
             <div class="social-icons">
-                <a href="https://tiktok.com/@busarmydude" target="_blank"><img src="logo-tiktok.svg" alt="TikTok"></a>
+                <a href="https://tiktok.com/@busarmydude" target="_blank"><img src="logo-tiktok.png" alt="TikTok"></a>
                 <a href="https://www.snapchat.com/add/riverkritzar" target="_blank"><img src="snapchat-logo.svg" alt="Snapchat"></a>
                 <a href="https://x.com/KritzarRiver" target="_blank"><img src="X_logo_2023_original.svg" alt="X"></a>
                 <a href="https://m.twitch.tv/BusArmyDude" target="_blank"><img src="logo-twitch.svg" alt="Twitch"></a>
