--- a/index.html
+++ b/index.html
@@ -41,22 +41,60 @@
         </div>
 
         <!-- Social Links Section -->
-        <div class="social-section section">
-            <div class="social-icons">
-                <a href="https://tiktok.com/@busarmydude" target="_blank"><img src="logo-tiktok.png" alt="TikTok"></a>
-                <a href="https://www.snapchat.com/add/riverkritzar" target="_blank"><img src="snapchat-logo.svg" alt="Snapchat"></a>
-                <a href="https://x.com/KritzarRiver" target="_blank"><img src="X_logo_2023_original.svg" alt="X"></a>
-                <a href="https://m.twitch.tv/BusArmyDude" target="_blank"><img src="logo-twitch.svg" alt="Twitch"></a>
-                <a href="https://www.facebook.com/profile.php?id=61569972389004" target="_blank"><img src="facebook-new.png" alt="Facebook"></a>
-                <a href="https://steamcommunity.com/profiles/76561199283946668/" target="_blank"><img src="Steam_icon_logo.svg.png" alt="Steam"></a>
-                <a href="https://music.apple.com/profile/riverkritzar53" target="_blank"><img src="Apple_Music_icon.svg.png" alt="Apple Music"></a>
-                <a href="https://www.amazon.com/gp/profile/amzn1.account.AGT3UBZSCSSNND6WAGLOLAS6NICA?isOwnerPublicView=true" target="_blank"><img src="AMZN-e9f942e4.png" alt="Amazon"></a>
-                <a href="https://odysee.com/@BusArmyDude:a" target="_blank"><img src="Odysee_Icon.svg.png" alt="Odysee"></a>
-                <a href="https://discord.gg/NjMtuZYc52" target="_blank"><img src="discord-icon.svg" alt="Discord Server"></a>
-                <a href="https://www.instagram.com/busarmydude/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-                <a href="https://www.threads.net/@busarmydude" target="_blank"><img src="Threads_(app)_logo.svg.png" alt="Threads"></a>
-            </div>
-        </div>
+        <div class="social-links-section">
+    <h2>Connect with Me</h2>
+    <div class="social-links-container">
+        <a href="https://tiktok.com/@busarmydude" class="social-button">
+            <img src="logo-tiktok.svg" alt="TikTok" class="social-icon">
+            <span>TikTok</span>
+        </a>
+        <a href="https://www.snapchat.com/add/riverkritzar" class="social-button">
+            <img src="snapchat-logo.svg" alt="Snapchat" class="social-icon">
+            <span>Snapchat</span>
+        </a>
+        <a href="https://x.com/KritzarRiver" class="social-button">
+            <img src="X_logo_2023_original.svg" alt="X" class="social-icon">
+            <span>X (Twitter)</span>
+        </a>
+        <a href="https://m.twitch.tv/BusArmyDude" class="social-button">
+            <img src="logo-twitch.svg" alt="Twitch" class="social-icon">
+            <span>Twitch</span>
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
+            <img src="facebook-new.png" alt="Facebook" class="social-icon">
+            <span>Facebook</span>
+        </a>
+        <a href="https://steamcommunity.com/profiles/76561199283946668" class="social-button">
+            <img src="Steam_icon_logo.svg.png" alt="Steam" class="social-icon">
+            <span>Steam</span>
+        </a>
+        <a href="https://music.apple.com/profile/riverkritzar53" class="social-button">
+            <img src="Apple_Music_icon.svg.png" alt="Apple Music" class="social-icon">
+            <span>Apple Music</span>
+        </a>
+        <a href="https://www.amazon.com/gp/profile/amzn1.account.AGT3UBZSCSSNND6WAGLOLAS6NICA?isOwnerPublicView=true" class="social-button">
+            <img src="AMZN-e9f942e4.png" alt="Amazon" class="social-icon">
+            <span>Amazon</span>
+        </a>
+        <a href="https://odysee.com/@BusArmyDude:a" class="social-button">
+            <img src="Odysee_Icon.svg.png" alt="Odysee" class="social-icon">
+            <span>Odysee</span>
+        </a>
+        <a href="https://discord.gg/NjMtuZYc52" class="social-button">
+            <img src="discord-icon.svg" alt="Discord" class="social-icon">
+            <span>Discord</span>
+        </a>
+        <a href="https://www.instagram.com/busarmydude/" class="social-button">
+            <img src="instagram.png" alt="Instagram" class="social-icon">
+            <span>Instagram</span>
+        </a>
+        <a href="https://www.threads.net/@busarmydude" class="social-button">
+            <img src="Threads_(app)_logo.svg.png" alt="Threads" class="social-icon">
+            <span>Threads</span>
+        </a>
+    </div>
+</div>
+
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <div id="tiktok-shoutouts">
