--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h2>Connect with Me</h2>
     <div class="social-links-container">
         <a href="https://tiktok.com/@busarmydude" class="social-button">
-            <img src="logo-tiktok.svg" alt="TikTok" class="social-icon">
+            <img src="logo-tiktok.png" alt="TikTok" class="social-icon">
             <span>TikTok</span>
         </a>
         <a href="https://www.snapchat.com/add/riverkritzar" class="social-button">
