--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             <img src="discord-icon.svg" alt="Discord" class="social-icon">
             <span>Discord</span>
         </a>
+        <a href="https://v.lemon8-app.com/s/OgUYrZUrj" class="social-button">
+            <img src="Lemon8_icon.png" alt="Lemon8" class="social-icon">
+            <span>Lemon8</span>
+        </a>
         <a href="https://www.instagram.com/busarmydude/" class="social-button">
             <img src="instagram.png" alt="Instagram" class="social-icon">
             <span>Instagram</span>
