--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span>Twitch</span>
         </a>
         <a href="https://www.facebook.com/profile.php?id=61569972389004" class="social-button">
-            <img src="facebook-new.png" alt="Facebook" class="social-icon">
+            <img src="pngimg.com - meta_PNG12.png" alt="Facebook" class="social-icon">
             <span>Facebook</span>
         </a>
         <a href="https://steamcommunity.com/profiles/76561199283946668" class="social-button">
