--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
                 <p><span>Price:</span> $1,067.49</p>
                 <p><span>Date Released:</span> September 20, 2024</p>
                 <p><span>Date Bought:</span> November 08, 2024</p>
-                <p><span>OS Version:</span> iOS 18.3 (22D5034e)</p>
+                <p><span>OS Version:</span> iOS 18.3 (22D5040d)</p>
                 <p><span>Battery Capacity %:</span> 100%</p>
+                <p><span>Battery Charge Cycles:</span> 93</p>
             </div>
 
             <!-- Apple Watch Section -->
