--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </div>
     </div>
 
-<!-- Version Panel Section (add this just before your footer) -->
+<!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
     <div class="version-header">Version Information</div>
     <div class="version-number">Version: v1.6.0</div>
