--- a/index.html
+++ b/index.html
@@ -274,6 +274,15 @@
 <div class="legal-protection-message">
     <p>This repository is protected by copyright laws. You may not clone, fork, or redistribute this repository in any form. Unauthorized use of the repository may result in legal action. Any violation of these terms will be subject to legal action and prosecution to the fullest extent of the law.</p>
 </div>
+
+
+<!-- Watermark text -->
+<div class="watermark">Watermark Text</div>
+
+<div class="content">
+    <h1>Welcome to My Website</h1>
+    <p>This content is protected by a watermark. Unauthorized use is prohibited.</p>
+</div>
     
     <!-- Footer -->
     <footer>
