--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
 </div>
 
 
-<!-- Watermark text -->
-<div class="watermark">Watermark Text</div>
+<!-- Watermark text (hidden by default, only appears when printing) -->
+    <div class="watermark">Watermark Text</div>
 
-<div class="content">
-    <h1>Welcome to My Website</h1>
-    <p>This content is protected by a watermark. Unauthorized use is prohibited.</p>
-</div>
+    <div class="content">
+        <h1>Welcome to My Website</h1>
+        <p>This content is protected by a watermark. Unauthorized use is prohibited.</p>
+    </div>
     
     <!-- Footer -->
     <footer>
