--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
     <div class="content">
         <h1>Welcome to My Website</h1>
         <p>This content is protected by a watermark. Unauthorized use is prohibited.</p>
+        <div id="doNotCopyText">DO NOT COPY WILL RESULT IN A LAWSUIT</div>
     </div>
     
     <!-- Footer -->
