--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
         </div>
     </div>
 
+<!-- Random Facts Section -->
+<section id="randomFacts">
+  <h2>Random Fun Fact / Quote</h2>
+  <p id="randomFactText">Loading...</p>
+</section>
+    
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
     <div class="version-header">Version Information</div>
