--- a/index.html
+++ b/index.html
@@ -254,11 +254,17 @@
         </div>
     </div>
 
-<!-- Random Facts Section -->
-<section id="randomFacts">
-  <h2>Random Fun Fact / Quote</h2>
-  <p id="randomFactText">Loading...</p>
-</section>
+<!-- Section for Useful Facts -->
+    <div>
+        <h2>Useful Fact of the Day</h2>
+        <p id="random-fact">Loading useful fact...</p>
+    </div>
+
+    <!-- Section for Random Quotes -->
+    <div>
+        <h2>Random Quote</h2>
+        <p id="random-quote">Loading random quote...</p>
+    </div>
     
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
