--- a/index.html
+++ b/index.html
@@ -254,17 +254,21 @@
         </div>
     </div>
 
-<!-- Section for Useful Facts -->
-    <div>
-        <h2>Useful Fact of the Day</h2>
-        <p id="random-fact">Loading useful fact...</p>
+<div class="container">
+    <div class="date-section">
+      <h2 id="currentDate"></h2>
     </div>
 
-    <!-- Section for Random Quotes -->
-    <div>
-        <h2>Random Quote</h2>
-        <p id="random-quote">Loading random quote...</p>
+    <div class="fact-quote-section">
+      <h2>Daily Fact</h2>
+      <p id="dailyFact" class="daily-text"></p>
     </div>
+
+    <div class="fact-quote-section">
+      <h2>Quote of the Day</h2>
+      <p id="dailyQuote" class="daily-text"></p>
+    </div>
+  </div>
     
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
