--- a/index.html
+++ b/index.html
@@ -254,21 +254,17 @@
         </div>
     </div>
 
-<div class="container">
-    <div class="date-section">
-      <h2 id="currentDate"></h2>
+    <!-- Quote of the Day Section -->
+    <div id="quote-of-the-day" class="quote-container">
+        <h2>Quote of the Day</h2>
+        <p id="quote-text">Loading Quote...</p>
     </div>
 
-    <div class="fact-quote-section">
-      <h2>Daily Fact</h2>
-      <p id="dailyFact" class="daily-text"></p>
+    <!-- Daily Fact Section -->
+    <div id="daily-fact" class="fact-container">
+        <h2>Daily Fact</h2>
+        <p id="fact-text">Loading Fact...</p>
     </div>
-
-    <div class="fact-quote-section">
-      <h2>Quote of the Day</h2>
-      <p id="dailyQuote" class="daily-text"></p>
-    </div>
-  </div>
     
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
