--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
         </div>
     </div>
 
+<!-- Date Section -->
+    <div id="current-date" class="date-container">
+        <h2>Today's Date</h2>
+        <p id="date-text">Loading Date...</p>
+    </div>
+
     <!-- Quote of the Day Section -->
     <div id="quote-of-the-day" class="quote-container">
         <h2>Quote of the Day</h2>
