--- a/index.html
+++ b/index.html
@@ -254,23 +254,10 @@
         </div>
     </div>
 
-<!-- Date Section -->
-    <div id="current-date" class="date-container">
-        <h2>Today's Date</h2>
-        <p id="date-text">Loading Date...</p>
-    </div>
-
-    <!-- Quote of the Day Section -->
-    <div id="quote-of-the-day" class="quote-container">
-        <h2>Quote of the Day</h2>
-        <p id="quote-text">Loading Quote...</p>
-    </div>
-
-    <!-- Daily Fact Section -->
-    <div id="daily-fact" class="fact-container">
-        <h2>Daily Fact</h2>
-        <p id="fact-text">Loading Fact...</p>
-    </div>
+<title>Quote and Fact of the Day</title>
+    <h3 id="currentDate">Loading Date...</h3>
+    <p id="dailyFact">Loading Fact of the Day...</p>
+    <p id="dailyQuote">Loading Quote of the Day...</p>
     
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
