--- a/index.html
+++ b/index.html
@@ -253,6 +253,15 @@
             </ul>
         </div>
     </div>
+    
+<!-- Facts and Quotes Section -->
+<div class="daily-section">
+    <h1 id="currentDate">Loading date...</h1>
+    <h2>Fact of the Day</h2>
+    <p id="dailyFact">Loading fact of the day...</p>
+    <h2>Quote of the Day</h2>
+    <p id="dailyQuote">Loading quote of the day...</p>
+</div>
 
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
@@ -290,6 +299,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="daily-content.js"></script>
     <body class="dark-mode">
 </body>
 </html>
