--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
     <p id="dailyFact">Loading fact of the day...</p>
     <h2>Quote of the Day</h2>
     <p id="dailyQuote">Loading quote of the day...</p>
+
+    <h2 id="disabilityTitle">Disability of the Day</h2>
+    <ul id="disabilityFacts">
+        <li>Loading facts about the disability...</li>
+    </ul>
 </div>
 
 <!-- Version Panel Section (Add this just before your footer) -->
