--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <p><span>Date Bought:</span> November 08, 2024</p>
                 <p><span>OS Version:</span> iOS 18.3 (22D5040d)</p>
                 <p><span>Battery Capacity %:</span> 100%</p>
-                <p><span>Battery Charge Cycles:</span> 95</p>
+                <p><span>Battery Charge Cycles:</span> 99</p>
             </div>
 
             <!-- Apple Watch Section -->
@@ -233,7 +233,7 @@
                 <p><span>Price:</span> $742.29</p>
                 <p><span>Date Released:</span> January 17, 2023</p>
                 <p><span>Date Bought:</span> May 16, 2024</p>
-                <p><span>OS Version:</span> macOS Sequoia 15.3 Beta (24D5034f)</p>
+                <p><span>OS Version:</span> macOS Sequoia 15.3 Beta 2 (24D5040f)</p>
                 <p><span>Battery Capacity %:</span> -</p>
             </div>
         </div>
