--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ai-features.css">
     <meta http-equiv="refresh" content="60">
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
@@ -289,7 +290,7 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="daily-content.js"></script>
+    <script src="ai-features.js"></script>
     <body class="dark-mode">
 </body>
 </html>
