--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
     </div>
 </div>
 
+<!-- AI Chat Bot Section -->
+<div id="chatbot-container">
+    <div id="chatbot-header">Chat with us</div>
+    <div id="chatbot-messages"></div>
+    <input id="chatbot-input" type="text" placeholder="Ask a question...">
+    <button id="chatbot-send">Send</button>
+</div>
+
+        
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <div id="tiktok-shoutouts">
