--- a/index.html
+++ b/index.html
@@ -103,12 +103,13 @@
 <!-- Chatbot Button -->
 <button id="chatButton" onclick="openChat()">Chat with us!</button>
 
-<!-- Chatbox -->
-<div id="chatbox">
+<!-- HTML for the chatbox -->
+<div id="chatbox" style="display:none;">
     <div id="chatlog"></div>
-    <input type="text" id="userMessage" placeholder="Type your message..." onkeyup="checkInput(event)">
+    <input type="text" id="userMessage" onkeydown="checkInput(event)" placeholder="Type your message...">
     <button onclick="sendMessage()">Send</button>
 </div>
+<button onclick="openChat()">Chat with us</button>
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
