--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
             <p>Hello, my name is River, I am 19. I am autistic. I love technology.</p>
         </div>
 
+<!-- Cookie Consent Banner -->
+    <div class="cookie-consent" id="cookieConsentBanner">
+        <p>We use cookies to ensure you get the best experience on our website. <a href="#">Learn more</a>.</p>
+        <button id="acceptCookies">Accept</button>
+    </div>
+
+    <!-- Accessibility Controls -->
+    <div id="accessibility-controls">
+        <button id="darkModeToggle">Toggle Dark Mode</button>
+        <button id="largeTextToggle">Toggle Large Text</button>
+    </div>
+    
         <!-- Social Links Section -->
         <div class="social-links-section">
     <h2>Connect with Me</h2>
