--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
             <p>Hello, my name is River, I am 19. I am autistic. I love technology.</p>
         </div>
 
-<!-- Cookie Consent Banner -->
-    <div class="cookie-consent" id="cookieConsentBanner">
-        <p>We use cookies to ensure you get the best experience on our website. <a href="#">Learn more</a>.</p>
-        <button id="acceptCookies">Accept</button>
-    </div>
+<!-- Dark Mode Toggle Button -->
+<button id="darkModeToggle">Toggle Dark Mode</button>
 
-    <!-- Accessibility Controls -->
-    <div id="accessibility-controls">
-        <button id="darkModeToggle">Toggle Dark Mode</button>
-        <button id="largeTextToggle">Toggle Large Text</button>
-    </div>
+<!-- Large Text Toggle Button -->
+<button id="largeTextToggle">Toggle Large Text</button>
+
+<!-- Cookie Consent Banner -->
+<div class="cookie-consent" style="display: block;">
+    <p>We use cookies to improve your experience. By using this site, you accept our cookie policy.</p>
+    <button id="acceptCookiesButton">Accept</button>
+</div>
+
     
         <!-- Social Links Section -->
         <div class="social-links-section">
